<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/job_list"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/search"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/image_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_filter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_bar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/filter_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/label1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fulltime"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/is_fulltime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/is_fulltime" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_fulltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/is_fulltime" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/location"
                app:layout_constraintEnd_toEndOf="@+id/is_fulltime"
                app:layout_constraintStart_toEndOf="@+id/label2"
                app:layout_constraintTop_toBottomOf="@+id/is_fulltime">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/apply_filter"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_filter"
                app:layout_constraintEnd_toEndOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_job_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_section"
        tools:listitem="@layout/item_job_list" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_job_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>